cabal-version:      3.0
name:               unify
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Brent Yorgey
maintainer:         byorgey@gmail.com
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Unify
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.19.0.0, equivalence, free, mtl, containers
    hs-source-dirs:   src
    default-language: Haskell2010
